--- a/pharmacymanagement2/src/app/component/medicine/view-medicine/view-medicine.component.html
+++ b/pharmacymanagement2/src/app/component/medicine/view-medicine/view-medicine.component.html
@@ -17,7 +17,7 @@
                 
 
 
-                <p class="card-text">category: {{ m.generic.name}}</p>
+                <p class="card-text">Generic: {{ m.generic.name}}</p>
                 
 
                 
