--- a/pharmacymanagement2/src/app/component/medicine/view-medicine/view-medicine.component.html
+++ b/pharmacymanagement2/src/app/component/medicine/view-medicine/view-medicine.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="row">
-        <div class="card md-4 m-1" style="width: 18rem;" *ngFor="let m of medicine">
+        <div class="card md-4 m-1" style="width: 18rem;" *ngFor="let m of medicines">
             <img [src]="'http://localhost:8087/images/medicine/' + m.image" class="card-img-top my-1" alt="{{ m.name }}">
 
             <div class="card-body">
