--- a/pharmacymanagement2/src/app/app.component.html
+++ b/pharmacymanagement2/src/app/app.component.html
@@ -30,6 +30,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/createpharmacist">Create Pharmacist</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/viewcustomer">View Customer</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/createcustomer">Create Customer</a>
+        </li>
+
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown link
