--- a/finalproject/src/app/product/viewproduct/viewproduct.component.html
+++ b/finalproject/src/app/product/viewproduct/viewproduct.component.html
@@ -1,17 +1,16 @@
 <div class="category-section">
   <h6>Search Category</h6>
-  <button (click)="toggleDropdown()">Select Category</button>
   
-  <div *ngIf="dropdownVisible">
-    <select (change)="filterByCategory($event)">
-      <option value="">All Categories</option>
-      <option *ngFor="let cat of getCategoryKeys()" [value]="cat">{{ cat }}</option>
-    </select>
-  </div>
+  <!-- Dropdown to select category -->
+  <select (change)="filterByCategory($event)">
+    <option value="">All Categories</option>
+    <!-- Populate categories dynamically -->
+    <option *ngFor="let c of categories" [value]="c.categoryname">{{ c.categoryname }}</option>
+  </select>
 </div>
 
 <div class="product-container">
-  <div *ngFor="let product of filteredProducts" class="product-card">
+  <div *ngFor="let product of products" class="product-card">
     <h4>{{ product.name }}</h4>
     <p *ngFor="let category of product.categories">Category: {{ category.categoryname }}</p> <!-- Display each category name -->
     <img [src]="product.photo" alt="{{ product.name }}" />
@@ -21,9 +20,9 @@
     <button (click)="updateProduct(product.id)" class="btn btn-primary">
       <fa-icon [icon]="faEdit"></fa-icon> Edit
     </button>
-    <button (click)="deleteProduct(product.id)" class="btn btn-danger">
+    <!-- <button (click)="deleteProduct(product.id)" class="btn btn-danger">
       <fa-icon [icon]="faTrash"></fa-icon> Delete
-    </button>
+    </button> -->
     </ng-container>
   </div>
 </div>
