--- a/pharmacymanagement2/src/app/component/medicine/create-medicine/create-medicine.component.html
+++ b/pharmacymanagement2/src/app/component/medicine/create-medicine/create-medicine.component.html
@@ -30,6 +30,11 @@
         <label for="manufacturerDate">Manufacturer Date:</label>
         <input type="date" id="manufacturerDate" class="form-control" formControlName="manufacturerDate"  required>
       </div>
+<!-- 
+      <div class="form-group">
+        <label for="unitPrice">Unit Price:</label>
+        <input type="number" id="unitPrice" class="form-control" formControlName="unitPrice"  required>
+      </div> -->
 
       <div class="form-group">
         <label for="stock">Stock:</label>
