--- a/pharmacymanagement2/src/app/app.component.html
+++ b/pharmacymanagement2/src/app/app.component.html
@@ -46,6 +46,9 @@
           <a class="nav-link" href="/createsalesorder">Create Sales Order</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="/viewSalesMedicine">View Sales</a>
+        </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
