--- a/finalproject/src/app/product/updateproduct/updateproduct.component.html
+++ b/finalproject/src/app/product/updateproduct/updateproduct.component.html
@@ -18,7 +18,7 @@
         </div>
         
         <div class="mb-3">
-            <label for="stock" class="form-label"><fa-icon [icon]="faTag"></fa-icon> Stock</label>
+            <label for="stock" class="form-label"><fa-icon [icon]="faTag"></fa-icon>Add Stock</label>
             <input type="number" class="form-control" id="stock" name="stock" [(ngModel)]="product.stock" required>
         </div>
         
