--- a/Sequrity/finalproject/src/app/loginregistration/userprofile/userprofile.component.html
+++ b/Sequrity/finalproject/src/app/loginregistration/userprofile/userprofile.component.html
@@ -5,7 +5,7 @@
         <div *ngIf="user">
             <p><fa-icon [icon]="faUserCircle"></fa-icon> <strong>Name: </strong>{{user.name}}</p>
             <p><fa-icon [icon]="faEnvelope"></fa-icon> <strong>Email: </strong>{{user.email}}</p>
-            <p><fa-icon [icon]="faImage"></fa-icon> <img [src]="user.photo" alt="{{user.name}}" class="profile-photo"></p>
+            <!-- <p><fa-icon [icon]="faImage"></fa-icon> <img [src]="user.photo" alt="{{user.name}}" class="profile-photo"></p> -->
             <p><fa-icon [icon]="faTag"></fa-icon> <strong>Role: </strong>{{user.role}}</p>
         </div>
 
