--- a/Sequrity/finalproject/src/app/navbar/navbar.component.html
+++ b/Sequrity/finalproject/src/app/navbar/navbar.component.html
@@ -68,9 +68,11 @@
         <a href="/viewproduct">
           <fa-icon [icon]="faEye"></fa-icon> View Products
         </a>
+        <!-- <li  *ngIf="isAdmin"> -->
         <a class="dropdown-item" href="/createProduct">
           <fa-icon [icon]="faPlus"></fa-icon> Create Products
         </a>
+        <!-- </li> -->
         <a class="dropdown-item" href="/createSales">
           <fa-icon [icon]="faShoppingCart"></fa-icon> Create Sales
         </a>
