--- a/Sequrity/finalproject/src/app/product/createproduct/createproduct.component.html
+++ b/Sequrity/finalproject/src/app/product/createproduct/createproduct.component.html
@@ -45,6 +45,6 @@
       <input class="form-control" type="file" id="formFile" (change)="onFileSelected($event)" accept="image/*" required>
     </div>
 
-    <button type="submit" class="btn btn-primary">Add Medicine</button>
+    <button type="submit" class="btn btn-primary">Add Product</button>
   </form>
 </div>
