--- a/Sequrity Final/Sequrity/finalproject/src/app/product/viewproduct/viewproduct.component.html
+++ b/Sequrity Final/Sequrity/finalproject/src/app/product/viewproduct/viewproduct.component.html
@@ -1,32 +1,35 @@
 <div class="category-section">
   <h6>Search Category</h6>
-
   <!-- Dropdown to select category -->
   <select (change)="filterByCategory($event)">
     <option value="">All Categories</option>
-    <!-- Populate categories dynamically -->
+    <!-- Dynamically populate categories -->
     <option *ngFor="let c of categories" [value]="c.categoryname">{{ c.categoryname }}</option>
   </select>
 </div>
 
 <div class="product-container">
   <div *ngFor="let product of products" class="product-card">
+    
     <img [src]="'http://localhost:8087/images/product/' + product.photo" class="card-img-top my-1"
-      alt="{{ product.name }}">
+         alt="Image of {{ product.name }}">
     <h4>{{ product.name }}</h4>
     <p *ngFor="let category of product.categories">Category: {{ category.categoryname }}</p>
     <p>Unit Price: {{ product.unitprice | currency }}</p>
-    <!-- <p>Quantity: {{ product.quantity }}</p> -->
     <p>Stock: {{ product.stock }}</p>
+    <p>Supplier: {{ product.supplier.name }}</p>
     
-    <!-- Only show buttons if product.id is defined -->
-    <ng-container *ngIf="product.id">
-      <button (click)="updateProduct(product.id)" class="btn btn-primary">
-        <fa-icon [icon]="faEdit"></fa-icon> Edit
-      </button>
-      <button (click)="deleteProduct(product.id)" class="btn btn-danger">
-        <fa-icon [icon]="faTrash"></fa-icon> Delete
-      </button>
+    
+    <!-- Admin role controls -->
+    <ng-container *ngIf="authService.getUserRole() === 'ADMIN'">
+      <ng-container *ngIf="product.id">
+        <button (click)="updateProduct(product.id)" class="btn btn-primary">
+          <fa-icon [icon]="faEdit"></fa-icon> Edit
+        </button>
+        <button (click)="deleteProduct(product.id)" class="btn btn-danger">
+          <fa-icon [icon]="faTrash"></fa-icon> Delete
+        </button>
+      </ng-container>
     </ng-container>
   </div>
 </div>
