--- a/Sequrity Final/Sequrity/finalproject/src/app/sales/viewsales/viewsales.component.html
+++ b/Sequrity Final/Sequrity/finalproject/src/app/sales/viewsales/viewsales.component.html
@@ -20,7 +20,7 @@
             <ul>
               <li *ngFor="let product of sale.product">
                 Name: {{ product.name }} - 
-                Quantity: {{product.quantity}} 
+                <!-- Quantity: {{product.quantity}}  -->
                 - Unit Price: {{ product.unitprice }}
               </li>
             </ul>
