--- a/Sequrity Final/Sequrity/finalproject/src/app/navbar/navbar.component.html
+++ b/Sequrity Final/Sequrity/finalproject/src/app/navbar/navbar.component.html
@@ -44,6 +44,18 @@
           </a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="/viewcustomer">
+            <fa-icon [icon]="faPlus"></fa-icon>View Customer
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/createcustomer">
+            <fa-icon [icon]="faPlus"></fa-icon>Create Customer
+          </a>
+        </li>
+
       </ul>
       <form class="d-flex" role="search">
 
