--- a/Sequrity Final/Sequrity/finalproject/src/app/product/createproduct/createproduct.component.html
+++ b/Sequrity Final/Sequrity/finalproject/src/app/product/createproduct/createproduct.component.html
@@ -15,6 +15,21 @@
       <input type="number" id="stock" class="form-control" formControlName="stock" required>
     </div>
 
+
+    <div class="form-group">
+      <label for="manufactureDate">
+        <fa-icon [icon]="faBox"></fa-icon> Manufacture Date:
+      </label>
+      <input type="date" id="manufactureDate" class="form-control" formControlName="manufactureDate" required>
+    </div>
+
+    <div class="form-group">
+      <label for="expiryDate">
+        <fa-icon [icon]="faBox"></fa-icon> Expiry Date:
+      </label>
+      <input type="date" id="expiryDate" class="form-control" formControlName="expiryDate" required>
+    </div>
+
     <div class="form-group">
       <label for="unitprice">
         <fa-icon [icon]="faDollarSign"></fa-icon> Unit Price:
