--- a/Okaj/2/Sequrity/finalproject/src/app/navbar/navbar.component.html
+++ b/Okaj/2/Sequrity/finalproject/src/app/navbar/navbar.component.html
@@ -116,12 +116,12 @@
 
       </ng-container>
 
-      <a class="nav-link" href="/viewsalesorder">
-        <fa-icon [icon]="faUser"></fa-icon> View Sales Order
+      <a class="dropdown-item" href="/vieworder">
+        <fa-icon [icon]="faEye"></fa-icon> View Order
       </a>
 
-      <a class="nav-link" href="/createsalesorder">
-        <fa-icon [icon]="faUser"></fa-icon> Create Sales Order
+      <a class="dropdown-item" href="/createorder">
+        <fa-icon [icon]="faEye"></fa-icon> Create Order
       </a>
 
     </div>
