--- a/Okaj/2/Sequrity/finalproject/src/app/order/view-order/view-order.component.html
+++ b/Okaj/2/Sequrity/finalproject/src/app/order/view-order/view-order.component.html
@@ -3,10 +3,10 @@
       <thead>
         <tr>
           <th>Id</th>
-          <th>Order Date</th>
-          <th>Customer</th>
-          
-          <th>Product Details</th>
+          <th>Product</th>
+          <th>Quantity</th>
+          <th>orderDate</th>
+          <th>customer</th>
           <th>Update</th>
           <th>Delete</th>
         </tr>
@@ -14,19 +14,13 @@
       <tbody>
         <tr *ngFor="let order of order">
           <td>{{ order.id }}</td>
+          
+          <td>{{ order.product.name }}</td>
+          <td>{{ order.quantity }}</td>
           <td>{{ order.orderDate }}</td>
           <td>{{ order.customer.name }}</td>
-          
-          <td>
-            <ul>
-              <li *ngFor="let product of order.products">
-                Name: {{ product.name }} - 
-                <!-- Quantity: {{product.quantity}}  -->
-                - Unit Price: {{ product.unitprice }}
-              </li>
-            </ul>
-          </td>
-          
+         
+         
           <!-- <td>
             <button class="btn btn-warning" (click)="editSales(sale)">
               <fa-icon [icon]="faEdit"></fa-icon> 
@@ -41,3 +35,4 @@
       </tbody>
     </table>
 </div>
+
