--- a/Okaj/2/Sequrity/finalproject/src/app/sales/createsales/createsales.component.html
+++ b/Okaj/2/Sequrity/finalproject/src/app/sales/createsales/createsales.component.html
@@ -1,12 +1,15 @@
 <div class="container mt-4">
-  <h2 class="text-center"><fa-icon [icon]="faCartPlus"></fa-icon> Create Sales</h2>
+  <h2 class="text-center">
+    <fa-icon [icon]="faCartPlus"></fa-icon> Create Sales
+  </h2>
   <form [formGroup]="salesForm" (ngSubmit)="createSales()">
 
     <!-- Customer Name -->
     <div class="form-group">
-      <label for="customername"><fa-icon [icon]="faUser"></fa-icon> Customer Name</label>
-      <input type="text" id="customername" class="form-control" formControlName="customername"
-        placeholder="Enter customer name">
+      <label for="customername">
+        <fa-icon [icon]="faUser"></fa-icon> Customer Name
+      </label>
+      <input type="text" id="customername" class="form-control" formControlName="customername" placeholder="Enter customer name" required>
       <div *ngIf="salesForm.get('customername')?.invalid && salesForm.get('customername')?.touched" class="text-danger">
         Customer name is required
       </div>
@@ -14,8 +17,10 @@
 
     <!-- Sales Date -->
     <div class="form-group mt-3 small-input col-md-4">
-      <label for="salesdate"><fa-icon [icon]="faCalendarAlt"></fa-icon> Sales Date</label>
-      <input type="date" id="salesdate" class="form-control" formControlName="salesdate" readonly>
+      <label for="salesdate">
+        <fa-icon [icon]="faCalendarAlt"></fa-icon> Sales Date
+      </label>
+      <input type="date" id="salesdate" class="form-control" formControlName="salesdate" readonly required>
       <div *ngIf="salesForm.get('salesdate')?.invalid && salesForm.get('salesdate')?.touched" class="text-danger">
         Sales date is required
       </div>
@@ -29,16 +34,17 @@
         <div class="flex-fill col-md-3"><label><fa-icon [icon]="faBox"></fa-icon> Product</label></div>
         <div class="flex-fill col-md-2"><label><fa-icon [icon]="faSortNumericDown"></fa-icon> Quantity</label></div>
         <div class="flex-fill col-md-2"><label><fa-icon [icon]="faDollarSign"></fa-icon> Unit Price</label></div>
+        <div class="flex-fill col-md-2"><label><fa-icon [icon]="faDollarSign"></fa-icon> Discount</label></div>
         <div class="flex-fill col-md-2"><label><fa-icon [icon]="faWarehouse"></fa-icon> Stock</label></div>
       </div>
 
       <!-- Product Form Groups -->
-      <div *ngFor="let product of productsArray.controls; let i = index" [formGroupName]="i" class="mb-3 border p-3">
+      <div *ngFor="let product of productsArray.controls; let i = index" [formGroupName]="i" class="mb-3 border p-3 rounded">
         <div class="d-flex justify-content-between">
 
           <!-- Category Field -->
           <div class="form-group flex-fill mr-2 col-md-3">
-            <select class="form-control" formControlName="category" (change)="onCategoryChange(i)">
+            <select class="form-control" formControlName="category" (change)="onCategoryChange(i)" required>
               <option value="">Select Category</option>
               <option *ngFor="let category of categories" [ngValue]="category">{{ category.categoryname }}</option>
             </select>
@@ -49,7 +55,7 @@
 
           <!-- Product Field -->
           <div class="form-group flex-fill mr-4 col-md-3">
-            <select class="form-control" formControlName="name">
+            <select class="form-control" formControlName="name" required>
               <option value="">Select Product</option>
               <option *ngFor="let filteredProduct of getFilteredProducts(i)" [value]="filteredProduct.name">
                 {{ filteredProduct.name }}
@@ -62,7 +68,7 @@
 
           <!-- Quantity Field -->
           <div class="form-group flex-fill mr-2 col-md-2">
-            <input type="number" class="form-control" formControlName="quantity" min="1" placeholder="Enter quantity">
+            <input type="number" class="form-control" formControlName="quantity" min="1" placeholder="Enter quantity" required>
             <div *ngIf="product.get('quantity')?.invalid && product.get('quantity')?.touched" class="text-danger">
               Quantity is required
             </div>
@@ -70,18 +76,22 @@
 
           <!-- Unit Price Field -->
           <div class="form-group flex-fill mr-2 col-md-2">
-            <input type="text" class="form-control" formControlName="unitprice" readonly>
+            <input type="number" class="form-control" formControlName="unitprice" readonly>
+          </div>
+
+          <div class="form-group flex-fill mr-2 col-md-2">
+            <input type="number" class="form-control" formControlName="discount">
           </div>
 
           <!-- Stock Field -->
           <div class="form-group flex-fill col-md-2">
-            <input type="text" class="form-control" formControlName="stock" readonly>
+            <input type="number" class="form-control" formControlName="stock" readonly>
           </div>
         </div>
 
         <!-- Buttons Row -->
         <div class="d-flex justify-content-between mt-3">
-          <button type="button" class="btn btn-info" (click)="removeProduct(i)">
+          <button type="button" class="btn btn-danger" (click)="removeProduct(i)">
             <fa-icon [icon]="faTrash"></fa-icon> Remove Product
           </button>
 
@@ -94,13 +104,15 @@
 
     <!-- Total Price -->
     <div class="form-group mt-4 small-input col-md-3">
-      <label for="totalprice"><fa-icon [icon]="faDollarSign"></fa-icon> Total Price</label>
-      <input type="text" id="totalprice" class="form-control" formControlName="totalprice" readonly>
+      <label for="totalprice">
+        <fa-icon [icon]="faDollarSign"></fa-icon> Total Price
+      </label>
+      <input type="number" id="totalprice" class="form-control" formControlName="totalprice" readonly>
     </div>
 
     <!-- Submit Button -->
-    <button type="submit" class="btn btn-success mt-4" >
+    <button type="submit" class="btn btn-success mt-4">
       <fa-icon [icon]="faSave"></fa-icon> Create Sales
     </button>
   </form>
-</div>  
+</div>
