--- a/Okaj/2/Sequrity/finalproject/src/app/supplier/createsupplier/createsupplier.component.html
+++ b/Okaj/2/Sequrity/finalproject/src/app/supplier/createsupplier/createsupplier.component.html
@@ -1,16 +1,26 @@
-<div class="container bg-category-form">
-    <h1 class="text-center">Add Category</h1>
-    <form [formGroup]="formValue">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Name</label>
-        <input type="text" class="form-control" formControlName="name">
-      </div>
+<div class="container bg-supplier-form">
+  <h1 class="text-center">Add Supplier</h1>
+  <form [formGroup]="formValue">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Name</label>
+      <input type="text" class="form-control" formControlName="name" placeholder="Enter name">
+    </div>
 
-      <div class="form-group">
-        <label for="exampleInputEmail1">Contact Info</label>
-        <input type="text" class="form-control" formControlName="contactInfo">
-      </div>
-      <button type="submit" class="btn btn-primary" (click)="createSupplier()">Submit</button>
-      
-    </form>
-  </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email</label>
+      <input type="email" class="form-control" formControlName="email" placeholder="Enter email">
+    </div>
+
+    <div class="form-group">
+      <label for="exampleInputEmail1">Cell</label>
+      <input type="number" class="form-control" formControlName="cell" placeholder="Enter cell number">
+    </div>
+
+    <div class="form-group">
+      <label for="exampleInputEmail1">Address</label>
+      <input type="text" class="form-control" formControlName="address" placeholder="Enter address">
+    </div>
+
+    <button type="submit" class="btn btn-primary" (click)="createSupplier()">Submit</button>
+  </form>
+</div>
