--- a/Okaj/2/Sequrity/finalproject/src/app/supplier/updatesupplier/updatesupplier.component.html
+++ b/Okaj/2/Sequrity/finalproject/src/app/supplier/updatesupplier/updatesupplier.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h1>Update Supplier</h1>
     <form (ngSubmit)="updateSupplier()">
 
         <div class="mb-3">
@@ -7,11 +8,22 @@
             
         </div>
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Contact Info</label>
-            <input type="text" class="form-control"   name="contactInfo" [(ngModel)]="supplier.contactInfo">
+            <label for="exampleInputEmail1" class="form-label">Email</label>
+            <input type="email" class="form-control"   name="email" [(ngModel)]="supplier.email">
             
         </div>
        
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Cell</label>
+            <input type="number" class="form-control"   name="cell" [(ngModel)]="supplier.cell">
+            
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Address</label>
+            <input type="text" class="form-control"   name="address" [(ngModel)]="supplier.address">
+            
+        </div>
     
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
